tests/example_policies/network-policy-checks/network-policy-check-scheme.yaml
namespaceList: ../../example_podlist/ns_list.json
podList: ../../example_podlist/pods_list.json

networkPolicyLists:
  - name: checks_policy
    networkPolicyList:
      - checks-network-policy.yaml
    expected_warnings: 0

queries:
  - name: all-captured
    allCaptured:
      - checks_policy
    expected: 4
